Always show GIF (stop hiding it on small screens); hide codesandbox example on small screens.

--- a/index-new_files/site.css
+++ b/index-new_files/site.css
@@ -1738,7 +1738,7 @@ dl dd {
   text-align: center
 }
 
-.hero-content-logo {
+.hero-banner-container {
   display: none
 }
 
@@ -1782,9 +1782,6 @@ dl dd {
   .hero-banner-container .browser {
     float: left;
     display: block;
-    margin-right: 2.35765%;
-    width: 65.88078%;
-    margin-left: 17.05961%
   }
 
   .hero-banner-container .browser:last-child {
@@ -2222,6 +2219,7 @@ dl dd {
 .css-button-rounded {
   background: #407AF6;
   color: #fff;
+  display: inline-block;
   padding: 20px 10px;
   text-align: center;
   border-radius: 8px;
@@ -2231,7 +2229,6 @@ dl dd {
   background: #11a25e;
   padding: 10px;
 }
-
 
 .css-button-rounded.fade {
   background: rgba(165, 160, 167, 0.38);
